web-infras/parser/tests/fixtures/babel/typescript/interface/new-line-error/output.txt
[SyntaxError]: Missing semicolon or line terminator. (2,3)
2|F {}
 | ^
